<resources>
    <string name="app_name">Inventory App</string>
    <string name="empty_view_title_text">Storage is empty.</string>
    <string name="empty_view_subtitle_text">Add new items.</string>
    <string name="category_overview">Overview</string>
    <string name="item_name">Product name</string>
    <string name="price">Product price</string>
    <string name="quantity">Quantity</string>
    <string name="sup_phone">Supplier phone</string>
    <string name="sup_name">Supplier name</string>
    <string name="action_delete_all_entries">Delete all entries</string>
    <string name="delete_dialog_msg">Delete this item?</string>
    <string name="editor_delete_item_successful">Item deleted</string>
    <string name="editor_delete_item_failed">Error with deleting item</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_update_item_failed">Error with updating item</string>
    <string name="editor_update_item_successful">Item updated</string>
    <string name="editor_insert_item_successful">Item saved</string>
    <string name="editor_insert_item_failed">Error with saving item</string>
    <string name="editor_activity_title_new_item">Add an item</string>
    <string name="editor_activity_title_edit_item">Edit item</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_call">Call</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="sale">Sale</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="empty">You have to fill all obligatory fields</string>

</resources>
